tested the light battery and temperature on bot

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ adafruit-circuitpython-neopixel = "^6.0.0"
 Adafruit-Blinka = "^5.8.0"
 rpi-ws281x = "^4.2.5"
 adafruit-circuitpython-dht = "^3.5.1"
+smbus = "^1.1.post2"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.4"
