--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,9 +17,11 @@ Adafruit-Blinka = "^5.8.0"
 rpi-ws281x = "^4.2.5"
 adafruit-circuitpython-dht = "^3.5.1"
 smbus = "^1.1.post2"
+zipfile37 = "^0.1.3"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.4"
+rope = "^0.18.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
